@@ -844,6 +844,35 @@ WIDGET_DEFAULT = {
         "column_index_wheel_lock": 4,
         "column_index_wheel_slip": 5,
     },
+    "laps_and_position": {
+        "enable": True,
+        "update_interval": 100,
+        "position_x": 57,
+        "position_y": 42,
+        "opacity": 0.9,
+        "layout": 1,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "bar_padding": 0.2,
+        "bar_gap": 2,
+        "show_lap_number": True,
+        "prefix_lap_number": "L",
+        "font_color_lap_number": "#000000",
+        "bkg_color_lap_number": "#FFFFFF",
+        "bkg_color_maxlap_warn": "#FF0000",
+        "show_position_overall": True,
+        "prefix_position_overall": "P",
+        "font_color_position_overall": "#FFFFFF",
+        "bkg_color_position_overall": "#222222",
+        "show_position_in_class": True,
+        "prefix_position_in_class": "C",
+        "font_color_position_in_class": "#FFFFFF",
+        "bkg_color_position_in_class": "#666666",
+        "column_index_lap_number": 1,
+        "column_index_position_overall": 2,
+        "column_index_position_in_class": 3,
+    },
     "lap_time_history": {
         "enable": True,
         "update_interval": 20,
